# health-management-agent

./: .dockerignore  .gitignore  README.md  docker-compose.yml  主体Agent流程解析.md  前端流程解析.md  后端流程解析.md  框架流程.txt  项目流程解析.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py  worker.py
backend/app/agent_graph/: __init__.py  graph.py  state.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py  schemas.py
backend/app/models/: entities.py
backend/app/services/: agent_eval_service.py  agent_memory_service.py  agent_runtime_service.py  cache_service.py  knowledge_seed.py  knowledge_service.py  llm.py  prompt_templates.py  react_agent.py  report_progress_service.py  report_queue_service.py  report_service.py  report_tool_service.py  routing_service.py  safety_service.py  session_service.py  summary_service.py  who_service.py
backend/medical_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: README  env.py
backend/migrations/versions/: 20260417_0001_initial_schema.py  20260417_0002_expand_text_columns_for_mysql.py  20260417_0003_add_agent_runtime_tables.py  (+2 more)
backend/tests/: test_agent_eval_runner.py  test_agent_memory_service.py  test_agent_runtime_service.py  test_cache_service.py  test_config_database.py  test_knowledge_service.py  test_react_agent.py  test_report_pipeline_eval.py  test_report_queue_service.py  test_report_service.py  test_report_tool_service.py  test_safety_and_routing.py  test_session_service.py  test_summary_service.py
frontend/: Dockerfile  (+5 more)
(+7 files in other folders)
